# akatsuki-hermes-integration

./: .gitignore  README.md  akatsuki.yaml  akatsuki_config.py  colab_train.ipynb  continue_pretrain.py  corpus_builder.py  dataset_builder.py  download_model.py  inference.py  install.ps1  install.ps1.bak  install.sh  install.sh.bak  kaggle_train.ipynb  lightning_prompt.txt  merge_model.py  pyproject.toml  requirements.txt  runpod_setup.sh  train.py
.github/workflows/: test.yml
akatsuki-obsidian/: .gitignore  README.md  live_demo.py  requirements.txt  run_bridge.py  test_all.py  test_bridge.py  test_debug.py  test_debug2.py  test_delete.py  test_fresh.py  test_read.py  test_tags.py
akatsuki-obsidian/api/: main.py
akatsuki-obsidian/dashboard/: index.html  package.json  vite.config.js
akatsuki-obsidian/hermes-bridge/: __main__.py
akatsuki-obsidian/hermes_bridge/: main.py  scheduler.py
akatsuki-obsidian/obsidian-plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
akatsuki-obsidian/proto/: ipc.proto
akatsuki-obsidian/schemas/: __init__.py  crdt.ts  message.ts  note.ts
akatsuki-obsidian/scripts/: install.py
akatsuki-original/: akatsuki_config.py  c2_builder.py  chain_builder.py  chain_executor.py  evasion_kit.py  hacker_team.py  hackerai.py  payload_factory.py  recon_engine.py  report_gen.py  swarm_orchestrator.py  team_agents.py  tool_runner.py  vuln_mapper.py
akatsuki-original/playbooks/: ad_takeover.yaml  cctv_chain.yaml  cloud_escape.yaml  external_pentest.yaml  ransomware_sim.yaml  (+1 more)
data/: mitre_attack.yaml  replays.json  vuln_db.yaml  widgets.json
patches/: 01-toolsets.py.patch  02-tools_config.py.patch  03-commands.py.patch  04-cli_commands_mixin.py.patch  05-cli.py.patch  toolsets.py.patch
templates/: report.html.j2  report.md.j2
tests/: test_akatsuki_evasion.py  test_akatsuki_payload.py  test_akatsuki_recon.py  test_akatsuki_replay.py  test_akatsuki_vuln.py  test_akatsuki_widgets.py  test_sync_manager.py
tools/: akatsuki_autonomous.py  akatsuki_c2.py  akatsuki_chain.py  akatsuki_dept.py  akatsuki_evasion.py  akatsuki_graph.py  akatsuki_mitre.py  akatsuki_msfrpc.py  akatsuki_payload.py  akatsuki_query.py  akatsuki_recon.py  akatsuki_replay.py  akatsuki_report.py  akatsuki_timeline.py  akatsuki_vuln.py  akatsuki_widgets.py  plugin_sdk.py
(+87 files in other folders)
